force-app/main/default/objects/Account/fields/Average_Reorder_Interval_Days__c.field-meta.xml
<CustomField>
    <fullName>Average_Reorder_Interval_Days__c</fullName>
    <inlineHelpText>DEMO / TO VALIDATE: interval between the two most recent activated orders.</inlineHelpText>
    <label>Average Reorder Interval (Days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>