force-app/main/default/objects/Account/fields/Expected_Reorder_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Reorder_Date__c</fullName>
    <label>Expected Reorder Date</label>
    <type>Date</type>
</CustomField>