force-app/main/default/objects/Account/fields/Last_Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Purchase_Date__c</fullName>
    <inlineHelpText>Maintained by flow when an order is activated.</inlineHelpText>
    <label>Last Purchase Date</label>
    <type>Date</type>
</CustomField>