force-app/main/default/objects/Account/fields/Last_Purchased_Product__c.field-meta.xml
<CustomField>
    <fullName>Last_Purchased_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Purchased Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Accounts (Last Purchased)</relationshipLabel>
    <relationshipName>Last_Purchased_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>