force-app/main/default/objects/Account/fields/Onboarding_Status__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Status__c</fullName>
    <inlineHelpText>Maintained by flow from the Customer Onboarding record.</inlineHelpText>
    <label>Onboarding Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>