force-app/main/default/objects/Account/fields/Orders_Last_12_Months__c.field-meta.xml
<CustomField>
    <fullName>Orders_Last_12_Months__c</fullName>
    <label>Orders (Last 12 Months)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>