force-app/main/default/objects/Account/fields/Reorder_Status__c.field-meta.xml
<CustomField>
    <fullName>Reorder_Status__c</fullName>
    <formula>IF(ISBLANK(Expected_Reorder_Date__c), "No Orders", IF(Expected_Reorder_Date__c &lt; TODAY(), "Overdue", IF(Expected_Reorder_Date__c - TODAY() &lt;= $CustomMetadata.Apex_Demo_Setting__mdt.Default.Reorder_Lead_Days__c, "Due", "On Track")))</formula>
    <label>Reorder Status</label>
    <type>Text</type>
</CustomField>