force-app/main/default/objects/Account/listViews/Apex_Reorder_Due.listView-meta.xml
<ListView>
    <fullName>Apex_Reorder_Due</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Customer_Type__c</columns>
    <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
    <columns>Last_Purchase_Date__c</columns>
    <columns>Average_Reorder_Interval_Days__c</columns>
    <columns>Expected_Reorder_Date__c</columns>
    <columns>Reorder_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reorder_Status__c</field>
        <operation>equals</operation>
        <value>Due,Overdue</value>
    </filters>
    <label>Apex Customers - Reorder Due / Overdue</label>
</ListView>